chore: simplify Docker image name definition in workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,8 +10,7 @@ on:
 
 env:
   DOCKER_REGISTRY: docker.io
-  DOCKER_REPO: ci-test
-  DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_REPO }}
+  DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/ci-test
 
 jobs:
   validate-secrets:
